# NoTrackSwitcher

./: BUILD.md  CMakeLists.txt  README.md  notrack.ini.default
.github/workflows/: release.yml
src/: Common.h  main.cpp
src/config/: Config.cpp  Config.h
src/core/: ClipManager.cpp  ClipManager.h  Converter.cpp  Converter.h  InputSender.cpp  InputSender.h  LayoutManager.cpp  LayoutManager.h  TextBuffer.cpp  TextBuffer.h  Worker.cpp  Worker.h
src/hook/: KeyboardHook.cpp  KeyboardHook.h  MouseHook.cpp  MouseHook.h
src/resources/: resource.h  resource.rc
src/ui/: SettingsDlg.cpp  SettingsDlg.h  TrayIcon.cpp  TrayIcon.h
